--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <form action="http://127.0.0.1:5000/convert/pdf2jpg" method="post" enctype="multipart/form-data">
+  <form action="http://127.0.0.1:5000/convert/png2jpg" method="post" enctype="multipart/form-data">
     <input type="file" name="file">
     <input type="submit" value="Convert to PNG">
   </form>
